[tool.poetry]
name = "trinity"
version = "0.1.0"
description = ""
authors = ["jahan <iamrengoku04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.110.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
